--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.22.10",
+    "@reduxjs/toolkit": "^2.2.7",
+    "contentful": "^10.15.0",
+    "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-redux": "^9.1.2",
+    "stripe": "^16.10.0"
   },
   "devDependencies": {
     "postcss": "^8",
