--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.22.10",
+    "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.2.7",
     "contentful": "^10.15.0",
     "next": "14.2.7",
